# libtock-rs

./: CONTRIBUTING.md  Cargo.toml  Makefile  layout_generic.ld  rust-toolchain
.cargo/: config
.github/workflows/: artifacts.yml  ci.yml  mac_os.yml  size-diff.yml
apis/console/src/: async_reader.rs  lib.rs  tests.rs
core/: Cargo.toml  build  check.sh  run.sh  test.sh
core/console/: Cargo.toml
core/console/src/: lib.rs
core/examples/: console.rs
core/fmt/: Cargo.toml
core/fmt/src/: lib.rs  tdebug.rs  writer.rs
core/libtock2/: Cargo.toml
core/libtock2/examples/: empty_main.rs
core/libtock2/src/: lib.rs
core/low_level_debug/: Cargo.toml
core/low_level_debug/src/: lib.rs
core/panic_debug/: Cargo.toml
core/panic_debug/src/: lib.rs
core/platform/: Cargo.toml
core/platform/src/: async_traits.rs  callbacks.rs  command_return.rs  error_code.rs  lib.rs  raw_syscalls.rs  return_variant.rs  struct_error_code.rs  struct_return_type.rs  subscribe_types.rs  syscalls.rs  syscalls_impl.rs
core/runtime/: Cargo.toml  extern_asm.rs  libtock_layout.ld
core/runtime/asm/: asm_arm.S  start_prototype.rs
core/runtime/src/: lib.rs  start_prototype.rs  syscalls_impl_arm.rs  syscalls_impl_riscv.rs
core/src/: lib.rs
core/src/entry_point/: mod.rs
core/sync/: Cargo.toml
core/sync/src/: lib.rs
core/syscall_tests/: Cargo.toml
core/syscall_tests/src/: allow_rw_tests.rs  command_tests.rs  lib.rs  subscribe_tests.rs  yield_tests.rs
core/tdebug_derive/: Cargo.toml
core/tdebug_derive/src/: lib.rs
core/tdebug_derive/tests/: derive.rs
core/unittest/: Cargo.toml
core/unittest/src/: command_return.rs  fake_driver.rs  fake_syscalls.rs  kernel.rs  lib.rs  mock.rs  syscall_log.rs
core/unittest/src/kernel/: mod.rs  raw_syscalls_impl.rs
examples/: hello_closure.rs  hello_pin.rs  hello_pin2.rs
src/: lib.rs
tools/print-sizes/src/: main.rs
