[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
categories = ["embedded", "no-std", "os"]
description = "libtock-rs formatting and printing tools."
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "libtock_fmt"
repository = "https://www.github.com/tock/libtock-rs"
version = "0.1.0"
