[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
categories = ["embedded", "no-std", "os"]
description = """libtock-rs #[panic_handler] implementation that provides \
                 useful diagnostics in the event of a panic at the expense of \
                 code size."""
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "libtock_panic_debug"
repository = "https://www.github.com/tock/libtock-rs"
version = "0.1.0"

[dependencies]
libtock_low_level_debug = { path = "../low_level_debug" }
libtock_platform = { path = "../platform" }
libtock_runtime = { path = "../runtime" }
