# This crate contains tests for libtock_platform functionality that requires a
# RawSyscalls implementation, namely the Syscalls implementation.
#
# These tests are not in libtock_platform because adding them to
# libtock_platform causes two incompatible copies of libtock_platform to be
# compiled:
#   1. The libtock_platform with cfg(test) enabled.
#   2. The libtock_platform that libtock_unittest depends on, which has
#      cfg(test) disabled.
# Mixing types from the two libtock_platform instantiations in the tests is
# confusing, so instead those tests live in this crate.

[package]
edition = "2018"
name = "syscall_tests"
version = "0.1.0"

[dependencies]
libtock_platform = { path = "../platform" }
libtock_unittest = { path= "../unittest" }
